# internal/server/competition.go
@@ -19,6 +19,7 @@ import (
 // @Tags         competition
 // @Accept       json
 // @Produce      json
+// @Param        Authorization  header    string  true  "Bearer <access_token>"
 // @Param        competition  body       models.Competition              true  "Competition data"
 // @Success      200           {object}  models.CompetitionResponse     			 "Returns competition data"
 // @Failure      400           {object}  models.ErrorResponse          "Bad Request"
@@ -85,6 +86,7 @@ func (s *Server) createCompetition(c *gin.Context) {
 // @Tags         competition
 // @Accept       json
 // @Produce      json
+// @Param        Authorization  header    string  true  "Bearer <access_token>"
 // @Success      200           {object}  models.CompetitionListResponse     			 "Returns competition data"
 // @Failure      400           {object}  models.ErrorResponse          "Bad Request"
 // @Failure      401           {object}  models.ErrorResponse          "Unauthorized (invalid credentials)"
@@ -120,6 +122,7 @@ func (s *Server) listCompetitions(c *gin.Context) {
 // @Tags         competition
 // @Accept       json
 // @Produce      json
+// @Param        Authorization  header    string  true  "Bearer <access_token>"
 // @Param        competition  body       models.CompetitionScaleInput  true  "Competition data"
 // @Success      200           {object}  gin.H       			 						 "Returns competition data"
 // @Failure      400           {object}  models.ErrorResponse          "Bad Request"
@@ -170,6 +173,7 @@ func (s *Server) addZoneToCompetition(c *gin.Context) {
 // @Tags         competition
 // @Accept       multipart/form-data
 // @Produce      json
+// @Param        Authorization  header    string  true  "Bearer <access_token>"
 // @Param        competitionID  formData  int     true  "Competition ID"
 // @Param        category       formData  string  true  "Participant category"
 // @Param        file           formData  file    true  "Excel file with participants data"
@@ -226,6 +230,7 @@ func (s *Server) addParticipantsToCompetition(c *gin.Context) {
 // @Tags         competition
 // @Accept       json
 // @Produce      json
+// @Param        Authorization  header    string  true  "Bearer <access_token>"
 // @Param        referee  body       models.RefereeInput  true  "Referee data"
 // @Success      200      {object}   gin.H               "Successfully added referee"
 // @Failure      400      {object}   models.ErrorResponse "Bad Request"
@@ -280,6 +285,7 @@ func (s *Server) addRefereeToCompetition(c *gin.Context) {
 // @Tags         competition
 // @Accept       json
 // @Produce      json
+// @Param        Authorization  header    string  true  "Bearer <access_token>"
 // @Param        competitionID  path      int     true  "Competition ID"
 // @Success      200           {object}  models.ZonesListResponse     "Returns list of zones"
 // @Failure      400           {object}  models.ErrorResponse         "Bad Request"
